<resources>
    <string name="app_name">OpenSync</string>
    <string name="account_manager">Account Manager</string>
    <string name="syncMethod">Sync Method</string>
    <string name="connection">Connection</string>
    <string name="intervalTitle">Autosync Interval</string>
    <string name="add_sync_pair">Add Sync Pair</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="create_folder">Create Folder</string>
    <string name="go_up">Up To</string>
    <string name="select_local_folder">Select A Local Folder</string>
    <string name="select_sync_cloud">Select A Cloud</string>
    <string name="select_account">Select An Account</string>
    <string name="select_cloud_folder">Select A Cloud Folder</string>
    <string name="new_account">Add New Account</string>
    <string name="OK">OK</string>
    <string name="foldercreated">Folder has been created!</string>
    <string name="google_drive">Google Drive</string>
    <string name="dropbox">Dropbox</string>
    <string name="sugarSync">SugarSync</string>
    <string name="baidu">Baidu Cloud</string>
    <string name="sina">Sina VDisk</string>
    <string name="failToCreate">Failed to create!</string>
    <string name="phone">PHONE</string>
    <string name="cloud">CLOUD</string>
    <string name="newFolderConflict">That name is in use by another file.</string>
    <string name="finish">Finish</string>
    <string name="lastSyncTime">Last Synced At : </string>
    <string name="action_divider"></string>
    <string name="desc"></string>
    <string name="loginFailed">Log in failed!</string>
    <string name="loginCanceled">Log in canceled!</string>
    <string name="loginout">Have been logged out!</string>
    <string name="wholeCloud">[Cloud Root Path]</string>
    <string name="fileFilter">Excluded Name Pattern</string>
    <string name="filterDes">"Line break separated patterns. File names end with either pattern will be ignored. For example, add .exe to exclude all windows executable files."</string>
    <string name="notConnect">Connection failed!</string>
    <string name="loading">Loading,Please wait &#8230;</string>
    <string name="conflictReplacePattern">Conflict Replace Pattern</string>
    <string name="delete">Delete</string>
    <string name="deleteAccountTitle">Delete Account</string>
    <string name="deleteAccountMsg">Caution:
        \nDeleting Account will delete corresponding Sync Task(s).</string>
    <string name="gotIt">Got It</string>
    <string name="index_empty">Tap the &#043; button in the menu bar, to create a sync pair.
    	\n\nIf your app supports Opensync, you don\'t need to manually create the sync pair. You just need to tap the "Opensync" button in your app to auto-configure the sync pair.</string>
    <string name="account_empty">No Linked Account.</string>
    <string name="logout">Log Out</string>
    <string name="account">Select Cloud Account</string>
    <string name="remotePath">Select Remote Path</string>
    <string name="localPath">Select Local Path</string>
    <string name="advance">Advanced Configuration</string>
    <string name="loginFirst">Please select cloud account first!</string>
    <string name="check_local">Please select a local path!</string>
    <string name="check_remote">Please select a remote path!</string>
    <string name="updateError">Update Error!</string>
    <string name="sync_task_add">Add Sync Task</string>
    <string name="sync_task_update">Update Sync Task</string>
    <string name="conflictReplacePatternDes">When there is a conflict situation, opensync will append this pattern to the conflict file name.</string>
    <string name="aboutFilter">About Excluded Name Pattern</string>
    <string name="aboutConflictReplacePattern">About Conflict Replace Pattern</string>
    <string name="feedback">Feedback</string>
    <string name="sendMail">Send mail &#8230;</string>
    <string name="sendError">There are no email clients installed.</string>
    <string name="about">About</string>
    <string name="updateConflictReplacePattern">Conflict Replace Pattern</string>
    <string name="addFilter">Excluded Name Pattern</string>
    <string name="licenseExpired">"Sorry! Your license is expired. Please extend your license to continue."</string>
    <string name="extendLicense">Extend license</string>
    <string name="localPathConflictTitle">Local Path Conflict</string>
    <string name="localPathConflictMsg">This path is conflict with a existing sync task. Do you want to delete the old task and continue?</string>
    <!-- About page -->
    <string name="titleReleaseNote">What\'s new?</string>
    <string name="ok">OK</string>
    <string name="rateIt">Rate it</string>
    <string name="unknownVersion">Unknown version</string>
    <string name="usingFree">Your license is expired.</string>
    <string name="usingProByInvitation">"Your license is valid(By invitations)."</string>
    <string name="usingSubscription">You have subscribed to Opensync license monthly.</string>
    <string name="usingPermanentPro">Your Opensync is licensed.</string>
    <string name="expireInNDays">"License will expire in %1$d day(s)"</string>
    <string name="titleBenefitsOfPro">Why Opensync?</string>
    <string name="summaryBenefitsOfPro">"Sync your folders quietly.\nSync tasks can be added either manually or from a third party app."</string>
    <string name="subscribe"><u>Subscribe to monthly license</u></string>
    <string name="permanentBuy"><u>Buy Permanent License</u></string>
    <string name="inviteFriends">"<u>Invite friends</u>"</string>
    <string name="inputInvitationCode">"<u>Input invitation code</u>"</string>
    <string name="bothGetOneMonthPro">"Both get an extra month's Pro license"</string>
    <string name="yourFriendGetOneMonthPro">"Your friend get a month's Pro license"</string>
    <string name="wrongInvitationCode">The invitation code is not valid.</string>
    <string name="alreadyInvited">You have already used an invitation code.</string>
    <string name="cannotReachServer">"Cannot reach the server"</string>
    <string name="detail"><u>Detail</u></string>
    <string name="cannotConnectToGooglePlay">Cannot connect to Google Play</string>
    <string name="inviteMessageTitle">"Get one month license of Opensync for free"</string>
    <string name="inviteMessageBody">I use Opensync to sync my folders with dropbox.\nHere is the link: %1$s\nYou get one month\'s license for free by using this invitation code: %2$S</string>
    <string name="subscriptionNotSupported">Subscription is not supported by your Google Play. Please update your Google Play and try again.</string>
    <string name="notSupportedByYourDevice">The operation is not supported by your device.</string>
    <string name="upgradeToPro">Upgrade to Pro</string>
    <string name="usingTrial">Trial license</string>
    <!-- end About page -->
    <string name="translate">Translate</string>
    <string name="syncpairConflict">The SyncPair Path conflict with other SyncPairs</string>
    <string name="expired">Expired license</string>
</resources>